--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -47,6 +47,10 @@
     margin-bottom: 20px;
 }
 
+#row-2 {
+    margin-bottom: 20px;
+}
+
 #footer ul.social li a i {
     margin-right: 5px;
 }
@@ -65,6 +69,12 @@
 
 #duo-img {
     width: 12rem;
+    align-self: center;
+    padding-top: 1rem;
+}
+
+#jeopardy-img {
+    width: 20rem;
     align-self: center;
     padding-top: 1rem;
 }
